# tacotron-tts-cpp

./: CMakeLists.txt  LICENSE  LICENSES.3rdparty.txt  README.md  bootstrap.sh
experiment/: Makefile  README.md  text-util.cc
experiment/number_to_words/: Makefile  main.cc
sample/: hparams.json  sequence01.json
scripts/: bootstrap-android.sh  bootstrap.sh
src/: audio-util.cc  audio_util.cc  audio_util.h  main.cc  tf_synthesizer.cc  tf_synthesizer.h
